# lambdatization

./: .dockerignore  .gitignore  .terraformignore  LICENSE  README.md  bench.sh  cli.Dockerfile  default.env  l12n  l12n-shell
.github/: PULL_REQUEST_TEMPLATE.md  gh-runner-setup.sh
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: ballista.yaml  chappy.yaml  clickhouse.yaml  engines.yaml  helper-ballista.yaml  helper-hadoop.yaml  l12n.yaml  semantic-pr.yaml  shell.yaml  style-check.yaml  trino.yaml
chappy/: Cargo.toml  build.rs  cbindgen.toml  seed.proto
chappy/examples/: Cargo.toml  client.rs  client_async.rs  helpers.rs  multi_clients.rs  n_to_n.rs  server.rs  slow_client.rs
chappy/interceptor/: Cargo.toml
chappy/interceptor/src/: bindings.rs  conf.rs  debug_fmt.rs  lib.rs  utils.rs
chappy/perforator/: Cargo.toml
chappy/perforator/src/: binding_service.rs  conf.rs  connsrv.rs  forwarder.rs  fwd_protocol.rs  lib.rs  main.rs  metrics.rs  perforator.rs  protocol.rs  quic_utils.rs  seed_client.rs  shutdown.rs  spawn.rs  udp_utils.rs
chappy/seed/: Cargo.toml  build.rs  seed.proto
chappy/seed/src/: address_stream.rs  lib.rs  main.rs  registered_endpoints.rs  seed_service.rs
chappy/seed/src/cluster_manager/: manager.rs  message.rs  mod.rs  state.rs  summary.rs
chappy/src/: bindings.rs  conf.rs  lib.rs  quic_utils.rs  seed_client.rs  utils.rs
chappy/util/: Cargo.toml
chappy/util/src/: awaitable_map.rs  lib.rs  protocol.rs  tcp_connect.rs  test.rs  timed_poll.rs  tracing.rs  tracing_helpers.rs
cli/: common.py  core.py  flags.py  main.py  requirements.txt
cli/docker/: Dockerfile  entrypoint.sh
cli/plugins/: ballista.py  chappy.py  clickhouse.py  dask.py  databend.py  dremio.py  lambdacli.py  lambdaric.py  monitoring.py  scaling.py  scheduler.py  scheduling.py  spark.py  tfcloud.py  trino.py
docker/ballista/: Dockerfile  README.md  distributed-handler.py  distributed.Dockerfile  docker-compose.yaml  lambda-handler.py  standalone-handler.py  standalone.Dockerfile
docker/chappy/: build.Dockerfile  dev-handler.py  dev.Dockerfile  docker-compose.yaml
docker/cli/: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  lambda-handler.py
docker/clickhouse/: Dockerfile  README.md  config.xml  distributed-config.xml  distributed-handler.py  distributed.Dockerfile  docker-compose.yaml  lambda-handler.py  standalone.Dockerfile
docker/dask/: Dockerfile  docker-compose.yaml  lambda-handler.py
docker/databend/: Dockerfile  bootstrap.sh  databend-meta.toml  databend-query.toml  docker-compose.yaml  lambda-handler.py
docker/dremio/: Dockerfile  lambda-handler.py
docker/scaling/: Dockerfile  docker-compose.yaml  lambda-handler.py
docker/spark/: docker-compose.yaml  lambda-handler.py  spark-class  spark-defaults.conf
docker/trino/: Dockerfile  lambda-handler.py
docker/trino/trino-etc/: node.properties
docker/trino/trino-etc/catalog/: hive.properties
docs/: scaling_metrics.md  standalone_engine_metrics.md
engines/spark/: Dockerfile
infra/: README.md  common.hcl  terragrunt.cloud.hcl  terragrunt.local.hcl
infra/ballista/: main.tf
infra/common/env/: conf.tf
infra/common/lambda/: inputs.tf  lambda.tf
infra/core/: backend.generated.tf  main.tf  outputs.tf  terragrunt.hcl  versions.generated.tf
infra/databend/: main.tf  terragrunt.hcl
infra/dremio/: main.tf  terragrunt.hcl
infra/monitoring/: README.md  terragrunt.cloud.hcl  terragrunt.local.hcl  versions.hcl
infra/monitoring/bigquery/: .terraform.lock.hcl  engine_durations.json  main.tf  scaling_durations.json  terragrunt.hcl
infra/runtime/: README.md  build_and_print.sh  terragrunt.cloud.hcl  terragrunt.local.hcl
infra/runtime/ballista/: .terraform.lock.hcl  main.tf  terragrunt.hcl
infra/runtime/chappy/: .terraform.lock.hcl  ecs.tf  main.tf  terragrunt.hcl
infra/runtime/clickhouse/: main.tf  terragrunt.hcl
infra/runtime/core/: main.tf
infra/runtime/dask/: main.tf  terragrunt.hcl
infra/runtime/databend/: main.tf  terragrunt.hcl
infra/runtime/dremio/: main.tf  terragrunt.hcl
infra/runtime/lambdacli/: main.tf  terragrunt.hcl
infra/runtime/scaling/: .terraform.lock.hcl  main.tf  terragrunt.hcl
infra/runtime/scheduler/: main.tf  terragrunt.hcl
infra/runtime/scheduling/: main.tf  terragrunt.hcl
infra/runtime/spark/: main.tf  terragrunt.hcl
infra/runtime/trino/: main.tf  terragrunt.hcl
infra/spark/: main.tf  terragrunt.hcl
