[workspace]
members = [
    "examples",
    "interceptor",
    "perforator",
    "seed",
    "util",
]

[workspace.dependencies]
chrono ="0.4"
futures = "0.3.25"
ipnet = "2.7.1"
lazy_static = "1.4.0"
libloading = "0.7.4"
nix = "0.26.1"
opentelemetry = "0.18.0"
opentelemetry-zipkin = { version = "0.16.0", default-features = false, features = ["reqwest-client"] }
opentelemetry-otlp =  { version = "0.11.0", features = ["reqwest-client", "reqwest-rustls", "http-proto"] }
prost = "0.11.7"
quinn = "0.9.3"
rcgen = "0.10.0"
rustls = "0.20.8"
socket2 = "0.5.1"
tokio = { version = "1.24.2", features = ["macros"] }
tokio-stream = "0.1.11"
tonic = "0.8.3"
tower = "0.4.13"
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
