[package]
name = "chappy-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "example-client"
path = "client.rs"

[[bin]]
name = "example-multi-clients"
path = "multi_clients.rs"

[[bin]]
name = "example-n-to-n"
path = "n_to_n.rs"

[[bin]]
name = "example-server"
path = "server.rs"

[lib]
name = "helpers"
path = "helpers.rs"

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
