[package]
name = "chappy-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "example-client-sync"
path = "client_sync.rs"

[[bin]]
name = "example-client-async"
path = "client_async.rs"

[[bin]]
name = "example-client-slow"
path = "slow_client.rs"

[[bin]]
name = "example-multi-clients"
path = "multi_clients.rs"

[[bin]]
name = "example-n-to-n"
path = "n_to_n.rs"

[[bin]]
name = "example-server"
path = "server.rs"

[lib]
name = "helpers"
path = "helpers.rs"

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
tokio = { version = "1.28.1" }
tokio-metrics = "0.2.2"
