[package]
name = "chappy-interceptor"
version = "0.1.0"
edition = "2021"

[lib]
name = "chappy"
crate-type = ["cdylib"] 

[dependencies]
chappy-perforator = { path = "../perforator" }
chappy-util = { path = "../util" }
futures = { workspace = true }
ipnet = { workspace = true }
lazy_static = { workspace = true }
libloading = { workspace = true }
nix = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tracing = { workspace = true }
