[package]
name = "chappy-perforator"
version = "0.1.0"
edition = "2021"

[dependencies]
chappy-seed = { path = "../seed" }
chappy-util = { path = "../util" }
env_logger = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
quinn = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true, features = ["dangerous_configuration", "quic"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tonic = { workspace = true }
tower = { workspace = true }
