[package]
name = "chappy-perforator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chappy-seed = { path = "../seed" }
chappy-util = { path = "../util" }
futures = { workspace = true }
lazy_static = { workspace = true }
quinn = { workspace = true }
quinn-proto = { workspace = true }
rand = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true, features = ["quic"] }
socket2 = { workspace = true, features = ["all"] }
tokio = { workspace = true, features = ["rt", "signal"] }
tokio-metrics = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
