[package]
name = "chappy-util"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
opentelemetry = { workspace = true, features = ["rt-tokio", "rt-tokio-current-thread"]}
opentelemetry-zipkin = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
